# KmkString

./: CMakeLists.txt  README.md
KmkString/: CMakeLists.txt
KmkString/include/: KmkString.h
KmkString/src/: KmkString.cpp
SampleTaskTargem/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  StupidTest.cpp
